--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="jumbotron">
     <h1 class="display-4">Jet GWC 2018 Quote Wall</h1>
-    <p class="lead">Add to the quote wall by forking this repo and submitting a pull request.</p>
+    <p class="lead">Add to the quote wall by forking this <a href="https://github.com/rpremvaree12/jetgwcquotes2018/">repo</a> and submitting a pull request.</p>
     <hr class="my-4">
     <p class="lead">
       <!-- <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a> -->
