--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <li class="list-group-item">"I DO have a really big head."</li>
     <li class="list-group-item">"You don't. You run it and then Javascript is like 'F*** YOU!'' and then you figure it out."</li>
     <li class="list-group-item">"Was it a real chicken?"</li>
+    <li class="list-group-item">"I. Declare. BANKRUPTCY!"</li>
   </ul>
 </div>
 
